fix link and layout issues on immersive cards

--- a/static/src/stylesheets/module/facia-garnett/item-types/_fc-item--type-comment.scss
+++ b/static/src/stylesheets/module/facia-garnett/item-types/_fc-item--type-comment.scss
@@ -34,7 +34,7 @@
             display: none;
         }
 
-        .fc-item__standfirst {
+        .fc-item__standfirst-wrapper {
             padding-bottom: $gs-gutter * .25;
         }
     }
